==> andrewc12/wch-resources/CH375LIB/MCS51/FILELIBC/EXAM7/CH375HFT.C <==
#include <reg52.h>
#include <stdio.h>
#define	MAX_BYTE_IO				35		/* 以字节为单位单次读写文件时的最大长度,默认值是29,值大则占用内存多,值小则超过该长度必须分多次读写 */
#define LIB_CFG_FILE_IO			1		/* 文件读写的数据的复制方式,0为"外部子程序",1为"内部复制" */
#define LIB_CFG_INT_EN			0		/* CH375的INT#引脚连接方式,0为"查询方式",1为"中断方式" */
#define	DISK_BASE_BUF_ADDR		0x0000	/* 外部RAM的磁盘数据缓冲区的起始地址,从该单元开始的缓冲区长度为SECTOR_SIZE */
#define CH375_INT_WIRE			INT0	/* P3.2, INT0, CH375的中断线INT#引脚,连接CH375的INT#引脚,用于查询中断状态 */
#define NO_DEFAULT_CH375_F_ENUM		1		/* 未调用CH375FileEnumer程序故禁止以节约代码 */
#define NO_DEFAULT_CH375_F_QUERY	1		/* 未调用CH375FileQuery程序故禁止以节约代码 */
#include "..\CH375HFC.H"
#define LED_OUT_INIT( )		{ P1_4 = 1; }	/* P1.4 高电平 */
#define LED_OUT_ACT( )		{ P1_4 = 0; }	/* P1.4 低电平驱动LED显示 */
#define LED_OUT_INACT( )	{ P1_4 = 1; }	/* P1.4 低电平驱动LED显示 */
#define LED_RUN_ACT( )		{ P1_5 = 0; }	/* P1.5 低电平驱动LED显示 */
#define LED_RUN_INACT( )	{ P1_5 = 1; }	/* P1.5 低电平驱动LED显示 */
#define LED_WR_ACT( )		{ P1_6 = 0; }	/* P1.6 低电平驱动LED显示 */
#define LED_WR_INACT( )		{ P1_6 = 1; }	/* P1.6 低电平驱动LED显示 */

void CH375_PORT_INIT( )  /* 由于使用通用I/O模块并口读写时序,所以进行初始化 */
{
	CH375_CS = 1;
	CH375_WR = 1;
	CH375_RD = 1;
	CH375_A0 = 0;
	P0 = 0xFF;  /* 并口输入 */
}

void xWriteCH375Cmd( UINT8 mCmd )		/* 外部定义的被CH375程序库调用的子程序,向CH375写命令 */
{
//*(UINT8XV *)0XBDF1 = mCmd;
//return;
	mDelay1_2uS( ); mDelay1_2uS( );  /* 至少延时1uS */
	P0 = mCmd;  /* 向CH375的并口输出数据 */
	CH375_A0 = 1;
	CH375_CS = 0;
	CH375_WR = 0;  /* 输出有效写控制信号, 写CH375芯片的命令端口 */
	CH375_CS = 0;  /* 该操作无意义,仅作延时,CH375要求读写脉冲宽度大于100nS */
	CH375_WR = 1;  /* 输出无效的控制信号, 完成操作CH375芯片 */
	CH375_CS = 1;
	CH375_A0 = 0;
	P0 = 0xFF;  /* 禁止数据输出 */
	mDelay1_2uS( ); mDelay1_2uS( );  /* 至少延时2uS */
}

void xWriteCH375Data( UINT8 mData )		/* 外部定义的被CH375程序库调用的子程序,向CH375写数据 */
{
//*(UINT8XV *)0XBCF0 = mData;
//return;
	P0 = mData;  /* 向CH375的并口输出数据 */
	CH375_A0 = 0;
	CH375_CS = 0;
	CH375_WR = 0;  /* 输出有效写控制信号, 写CH375芯片的数据端口 */
	CH375_CS = 0;  /* 该操作无意义,仅作延时,CH375要求读写脉冲宽度大于100nS */
	CH375_WR = 1;  /* 输出无效的控制信号, 完成操作CH375芯片 */
	CH375_CS = 1;
	P0 = 0xFF;  /* 禁止数据输出 */
	mDelay1_2uS( );  /* 至少延时1.2uS */
}

UINT8 xReadCH375Data( void )			/* 外部定义的被CH375程序库调用的子程序,从CH375读数据 */
{
	UINT8	mData;
//return( *(UINT8XV *)0XBCF0 );
	mDelay1_2uS( );  /* 至少延时1.2uS */
	P0 = 0xFF;  /* 输入 */
	CH375_A0 = 0;
	CH375_CS = 0;
	CH375_RD = 0;  /* 输出有效写控制信号, 读CH375芯片的数据端口 */
	CH375_CS = 0;  /* 该操作无意义,仅作延时,CH375要求读写脉冲宽度大于100nS */
	mData = P0;  /* 从CH375的并口输入数据 */
	CH375_RD = 1;  /* 输出无效的控制信号, 完成操作CH375芯片 */
	CH375_CS = 1;
	return( mData );
}

void	mInitSTDIO( )
{
	SCON = 0x50;
	PCON = 0x80;
	TMOD = 0x20;
	TH1 = 0xf3;  /* 24MHz晶振, 9600bps */
	TR1 = 1;
	TI = 1;
}
